--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,9 @@ dependencies {
 
 	// WebSocket 추가
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+	// Guava 라이브러리 추가
+	implementation 'com.google.guava:guava:30.1-jre'
 }
 
 tasks.named('test') {
