--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -18,7 +18,10 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
-          
+
+      - name: 테스트용 redis docker로 띄우기
+        run: |
+            docker run --name my-redis -d -p 6379:6379 redis:latest
   build:
     name: 이미지 빌드 및 도커허브 푸시
     runs-on: ubuntu-latest
@@ -32,12 +35,6 @@ jobs:
           ACTIONS_STEP_DEBUG: true
           APPLICATION_PROD: ${{ secrets.APPLICATION_PROD_YML }}
         run: echo "$APPLICATION_PROD" > src/main/resources/application-prod.yml
-      - name: jdk 17 설치
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: 'gradle'
       - name: gradlew 실행 권한 부여
         run: chmod +x gradlew
       - name: gradle 빌드
