--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 ### application-*.yml
-application-*.yml
+application-secret.yml
+
 
 # User-specific stuff
 .idea/**/workspace.xml
