--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,24 @@
 spring:
   profiles:
     active: dev
+    include: secret
+
+  datasource:
+    username: root
+    password:
+    driver-class-name: org.h2.Driver
+  h2:
+    console:
+      enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: create
+    #    defer-datasource-initialization: true
+    open-in-view: false
+  data:
+    redis:
+      host: localhost
+      port: 6379
+#  sql:
+#    init:
+#      mode: always
