--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -42,6 +42,13 @@ jobs:
           APPLICATION_PROD: ${{ secrets.APPLICATION_SECRET_YML }}
         run: echo "$APPLICATION_SECRET" > src/main/resources/application-secret.yml
 
+      - name: jdk 17 설치
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: 'gradle'
+
       - name: gradlew 실행 권한 부여
         run: chmod +x gradlew
       - name: gradle 빌드
