--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -52,7 +52,7 @@ jobs:
       - name: gradlew 실행 권한 부여
         run: chmod +x gradlew
       - name: gradle 빌드
-        run: ./gradlew build --no-daemon
+        run: ./gradlew build --no-daemon -i
       - name: build 폴더를 캐시에 저장
         uses: actions/upload-artifact@v3
         with:
