--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -51,11 +51,12 @@ jobs:
 
       - name: gradlew 실행 권한 부여
         run: chmod +x gradlew
-      - name: gradle 테스트
-        run: ./gradlew test --no-daemon --profile -Ptest
-        
+
       - name: gradle 빌드
         run: ./gradlew build --no-daemon -i
+        env:
+          REDIS_HOST: localhost
+          REDIS_PORT: 6379
       - name: build 폴더를 캐시에 저장
         uses: actions/upload-artifact@v3
         with:
