--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -39,7 +39,7 @@ jobs:
       - name: application-secret.yml 생성
         env:
           ACTIONS_STEP_DEBUG: true
-          APPLICATION_PROD: ${{ secrets.APPLICATION_SECRET_YML }}
+          APPLICATION_SECRET: ${{ secrets.APPLICATION_SECRET_YML }}
         run: echo "$APPLICATION_SECRET" > src/main/resources/application-secret.yml
 
       - name: jdk 17 설치
