--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: 테스트용 redis docker로 띄우기
         run: |
-            docker run --name my-redis -d -p 6379:6379 redis:latest
+            docker run --name redis -d -p 6379:6379 redis:latest
   build:
     name: 이미지 빌드 및 도커허브 푸시
     runs-on: ubuntu-latest
@@ -55,7 +55,7 @@ jobs:
       - name: gradle 빌드
         run: ./gradlew build --no-daemon -i
         env:
-          REDIS_HOST: localhost
+          REDIS_HOST: redis
           REDIS_PORT: 6379
       - name: build 폴더를 캐시에 저장
         uses: actions/upload-artifact@v3
