--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -20,6 +20,7 @@ jobs:
           distribution: 'adopt'
 
       - name: 테스트용 redis docker로 띄우기
+        run: |
           docker network create mynetwork
           docker run --name redis -d -p 6379:6379 --network mynetwork redis:latest
   build:
