--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -19,10 +19,6 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
-      - name: 테스트용 redis docker로 띄우기
-        run: |
-          docker network create mynetwork
-          docker run --name redis -d -p 6379:6379 --network mynetwork redis:latest
   build:
     name: 이미지 빌드 및 도커허브 푸시
     runs-on: ubuntu-latest
@@ -43,6 +39,10 @@ jobs:
           APPLICATION_SECRET: ${{ secrets.APPLICATION_SECRET_YML }}
         run: echo "$APPLICATION_SECRET" > src/main/resources/application-secret.yml
 
+      - name: 테스트용 redis docker로 띄우기
+        run: |
+          docker run --name redis -d -p 6379:6379 redis:latest
+
       - name: jdk 17 설치
         uses: actions/setup-java@v3
         with:
@@ -56,8 +56,10 @@ jobs:
       - name: gradle 빌드
         run: ./gradlew build --no-daemon -i
         env:
-          REDIS_HOST: redis
+          REDIS_HOST: localhost
           REDIS_PORT: 6379
+
+                  
       - name: build 폴더를 캐시에 저장
         uses: actions/upload-artifact@v3
         with:
