--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     open-in-view: false
   data:
     redis:
-      host: redis
+      host: localhost
       port: 6379
 #  sql:
 #    init:
