mariaDB 사용할 수 있도록 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,8 @@ spring:
 
   datasource:
     username: root
-    password:
+    password: 1234
+#    driver-class-name: org.mariadb.jdbc.Driver
     driver-class-name: org.h2.Driver
   h2:
     console:
