--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:dev
-
+    #url: jdbc:mariadb://localhost:3306/test?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul
+    url: jdbc:h2:mem:test
 logging:
   level:
     org:
