--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,16 +11,14 @@ spring:
   h2:
     console:
       enabled: true
-#  jpa:
+  jpa:
+    open-in-view: false
 #    show-sql: true
 #    properties:
 #      hibernate:
 #        format_sql: true
 #        highlight_sql: true
-    hibernate:
-      ddl-auto: create
-    #    defer-datasource-initialization: true
-    open-in-view: false
+
   data:
     redis:
       host: localhost
